samples/_failures_safe/1761260116_dab99e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8665539c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8665539c.c:160:20: error: expected ‘;’ at end of input
  160 |         token_count
      |                    ^
      |                    ;
./samples/SAFE/__tmp_8665539c.c:160:9: error: expected declaration or statement at end of input
  160 |         token_count
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_8665539c.c:160:9: error: expected declaration or statement at end of input
